--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
         </div>
         <div class="w-col w-col-4">
           <div class="w-layout-blockcontainer container-5 w-container">
-            <a href="#" class="button w-button">Download C.V. (PDF)</a>
-            <a href="#" class="footer-social-link w-inline-block"><img src="images/LinkedIn_logo_initials.png" loading="lazy" width="40" height="40" alt="" srcset="images/LinkedIn_logo_initials-p-500.png 500w, images/LinkedIn_logo_initials.png 1024w" sizes="(max-width: 479px) 11vw, (max-width: 767px) 40px, (max-width: 991px) 32.75px, 40px"></a>
-            <a href="#" class="footer-social-link w-inline-block"><img src="images/github-2.png" loading="lazy" width="40" height="40" alt=""></a>
+            <a href="Oliver%20Johnson%20CV.pdf" class="button w-button">Download C.V. (PDF)</a>
+            <a href="https://www.linkedin.com/in/oliver-johnson-37a412197/" class="footer-social-link w-inline-block"><img src="images/LinkedIn_logo_initials.png" loading="lazy" width="40" height="40" alt="" srcset="images/LinkedIn_logo_initials-p-500.png 500w, images/LinkedIn_logo_initials.png 1024w" sizes="(max-width: 479px) 11vw, (max-width: 767px) 40px, (max-width: 991px) 32.75px, 40px"></a>
+            <a href="https://github.com/oliveslongjohns" class="footer-social-link w-inline-block"><img src="images/github-2.png" loading="lazy" width="40" height="40" alt=""></a>
           </div>
         </div>
       </div>
