--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         <div class="w-col w-col-6">
           <h4 class="heading-5">How do I work with clients?</h4>
-          <p class="paragraph-2">I work as a fee earner in the practice area of an LLP. We win our own work and builds our own relationships. I collaborate with lawyers and stakeholders from practice areas across the firm and am always selling a solution to someone. Communication is as key as technical understanding.</p>
+          <p class="paragraph-2">I work as a fee earner in the practice area of an LLP. We win our own work and build our own relationships. I collaborate with lawyers and stakeholders from practice areas across the firm and am always selling a solution to someone. Communication is as key as technical understanding.</p>
         </div>
       </div>
     </div>
