changed copywrite on utilties

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="columns-4 w-row">
         <div class="w-col w-col-6">
           <h4 class="heading-4">How do I use Time Series?</h4>
-          <p class="paragraph-4">In Utilities, the most important data piece is energy consumption data. With a growing environmental crisis, and volatile energy markets, clients are prioritsing reducing their energy costs and CO2 emissions more than ever. You do this by analysing their consumption over time, and identifying where to reduce it. </p>
+          <p class="paragraph-4">In Utilities, the most important data piece is energy consumption data. With a growing environmental crisis and volatile energy markets, clients are prioritsing reducing their energy costs and CO2 emissions more than ever. I analysed their consumption over time, identified the key drivers, and advised on where they could save. </p>
         </div>
         <div class="w-col w-col-6">
           <h4 class="heading-5">How do I work with clients?</h4>
