updates to website

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun Sep 15 2024 20:07:45 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Sep 24 2024 23:31:03 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66dde2048b7957d393932dc3" data-wf-site="66dde2048b7957d393932db8">
 <head>
   <meta charset="utf-8">
@@ -19,7 +19,7 @@
 <body>
   <section class="section-top">
     <div class="w-layout-blockcontainer container w-container">
-      <div class="div-block"><img src="images/thumbnail_Oliver-Johnson-Web.jpg" loading="lazy" sizes="(max-width: 767px) 100vw, 940px" srcset="images/thumbnail_Oliver-Johnson-Web-p-500.jpg 500w, images/thumbnail_Oliver-Johnson-Web-p-800.jpg 800w, images/thumbnail_Oliver-Johnson-Web-p-1080.jpg 1080w, images/thumbnail_Oliver-Johnson-Web.jpg 1600w" alt="" class="image">
+      <div class="div-block"><img src="images/thumbnail_Oliver-Johnson-Web.jpg" loading="lazy" width="Auto" sizes="(max-width: 991px) 100vw, 940px" alt="" srcset="images/thumbnail_Oliver-Johnson-Web-p-500.jpg 500w, images/thumbnail_Oliver-Johnson-Web-p-800.jpg 800w, images/thumbnail_Oliver-Johnson-Web-p-1080.jpg 1080w, images/thumbnail_Oliver-Johnson-Web.jpg 1600w" class="image">
         <div class="name">Oliver Johnson</div>
         <div class="title">Solutions Engineer</div>
       </div>
@@ -28,6 +28,8 @@
   <section class="section-mid">
     <div class="w-layout-blockcontainer container-6 w-container">
       <h1 class="heading-2">I am a people-orientated, problem solver with 4 years experience building client-facing data solutions.</h1>
+    </div>
+    <div class="w-layout-blockcontainer container-6 w-container">
       <div class="columns w-row">
         <div class="column w-col w-col-4">
           <h5>Data Engineering</h5>
@@ -39,7 +41,7 @@
             <li>Document Processing</li>
           </ul>
         </div>
-        <div class="w-col w-col-4">
+        <div class="column-7 w-col w-col-4">
           <h5>Data Science &amp; A.I.</h5>
           <ul role="list">
             <li>Language Models</li>
@@ -89,10 +91,10 @@
   <section class="section-bottom">
     <div class="w-layout-blockcontainer container-7 w-container">
       <div class="columns-2 w-row">
-        <div class="w-col w-col-8">
+        <div class="column-6 w-col w-col-8">
           <div class="customtext1">Check out my C.V. for a full breakdown of all my experience and past roles.<br>Feel free to take a look at my LinkedIn and GitHub too.</div>
         </div>
-        <div class="w-col w-col-4">
+        <div class="column-5 w-col w-col-4">
           <div class="w-layout-blockcontainer container-5 w-container">
             <a href="Oliver%20Johnson%20CV.pdf" class="button w-button">Download C.V. (PDF)</a>
             <a href="https://www.linkedin.com/in/oliver-johnson-37a412197/" class="footer-social-link w-inline-block"><img src="images/LinkedIn_logo_initials.png" loading="lazy" width="40" height="40" alt="" srcset="images/LinkedIn_logo_initials-p-500.png 500w, images/LinkedIn_logo_initials.png 1024w" sizes="(max-width: 479px) 11vw, (max-width: 767px) 40px, (max-width: 991px) 32.75px, 40px"></a>
